--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,134 +1,30 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-  <!-- Basic -->
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <!-- Mobile Metas -->
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
-  <link rel="shortcut icon" href="images/favicon.png" type="">
-
-  <title> Tasker | Sign Up </title>
-
-  <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="/css/bootstrap.css" />
-
-  <!-- fonts style -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-
-  <!-- font awesome style -->
-  <link href="/css/font-awesome.min.css" rel="stylesheet" />
-
-  <!-- Custom styles for this template -->
-  <link href="/css/style.css" rel="stylesheet" />
-  <!-- responsive style -->
-  <link href="/css/responsive.css" rel="stylesheet" />
-
-</head>
-
-<body>
-
-  <div class="cover">
-
-    <div class="hero_bg_box">
-      <div class="bg_img_box">
-        <img src="/images/hero-bg.png" alt="">
-      </div>
+<%- include('partials/header') %>
+<div class="container mt-5">
+  <h1>Signup</h1>
+  <% if (error) { %>
+    <div class="alert alert-danger"><%= error %></div>
+  <% } %>
+  <form action="/api/auth/register" method="POST">
+    <div class="form-group">
+      <label for="name">Name</label>
+      <input type="text" class="form-control" id="name" name="name" required>
     </div>
-
-    <!-- header section strats -->
-    <header class="header_section">
-      <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg custom_nav-container ">
-          <a class="navbar-brand" href="/">
-            <span>
-              Task Managers
-            </span>
-          </a>
-
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class=""> </span>
-          </button>
-
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav  ">
-
-              <li class="nav-item">
-                <a class="nav-link" href="/signup"> <i class="fa fa-user" aria-hidden="true"></i> Sign Up</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
-      </div>
-    </header>
-    <!-- end header section -->
-
-    <!-- signup section -->
-    <section class="signup_section layout_padding">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6 mx-auto">
-            <div class="form_container">
-              <div class="heading_container heading_center">
-                <h2>
-                  Sign Up
-                </h2>
-              </div>
-              <form action="/api/auth/signup" method="POST">
-                <div>
-                  <input type="text" name="name" placeholder="Name" required />
-                </div>
-                <div>
-                  <input type="email" name="email" placeholder="Email" required />
-                </div>
-                <div>
-                  <input type="password" name="password" placeholder="Password" required />
-                </div>
-                <div>
-                  <select name="role" required>
-                    <option value="" disabled selected>Select your role</option>
-                    <option value="manager">Manager</option>
-                    <option value="employee">Employee</option>
-                  </select>
-                </div>
-                <div class="btn_box">
-                  <button type="submit">
-                    Sign Up
-                  </button>
-                </div>
-                <p>
-                  Already have an account? <a href="/login">Login</a>
-                </p>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- end signup section -->
-  </div>
-
-  <!-- footer section -->
-  <%- include('partials/footer') %>
-  <!-- footer section -->
-
-  <!-- jQery -->
-  <script type="text/javascript" src="/js/jquery-3.4.1.min.js"></script>
-  <!-- popper js -->
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-  </script>
-  <!-- bootstrap js -->
-  <script type="text/javascript" src="/js/bootstrap.js"></script>
-  <!-- custom js -->
-  <script type="text/javascript" src="/js/custom.js"></script>
-
-</body>
-
-</html>
+    <div class="form-group">
+      <label for="email">Email address</label>
+      <input type="email" class="form-control" id="email" name="email" required>
+    </div>
+    <div class="form-group">
+      <label for="password">Password</label>
+      <input type="password" class="form-control" id="password" name="password" required>
+    </div>
+    <div class="form-group">
+      <label for="role">Role</label>
+      <select class="form-control" id="role" name="role" required>
+        <option value="manager">Manager</option>
+        <option value="employee">Employee</option>
+      </select>
+    </div>
+    <button type="submit" class="btn btn-primary">Signup</button>
+  </form>
+</div>
+<%- include('partials/footer') %>
