--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-  <!-- Basic -->
+  <!-- Basic meta tags -->
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <!-- Site Metas -->
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
@@ -15,34 +12,25 @@
 
   <title>Task Managers</title>
 
-  <!-- bootstrap core css -->
+  <!-- Bootstrap core CSS -->
   <link rel="stylesheet" type="text/css" href="/css/bootstrap.css" />
-
-  <!-- fonts style -->
+  <!-- Fonts style -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-
-  <!-- owl slider stylesheet -->
+  <!-- Owl slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
-
-  <!-- font awesome style -->
+  <!-- Font Awesome style -->
   <link href="/css/font-awesome.min.css" rel="stylesheet" />
-
   <!-- Custom styles for this template -->
   <link href="/css/style.css" rel="stylesheet" />
-  <!-- responsive style -->
+  <!-- Responsive style -->
   <link href="/css/responsive.css" rel="stylesheet" />
-
 </head>
-
 <body>
-  <!-- header section starts -->
   <header class="header_section bg-dark">
     <div class="container-fluid">
       <nav class="navbar navbar-expand-lg custom_nav-container">
         <a class="navbar-brand text-white" href="/">
-          <span>
-            Task Managers
-          </span>
+          <span>Task Managers</span>
         </a>
         <div class="navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
@@ -60,4 +48,3 @@
       </nav>
     </div>
   </header>
-  <!-- end header section -->
