--- a/views/editTask.ejs
+++ b/views/editTask.ejs
@@ -12,11 +12,14 @@
     </div>
     <div class="form-group">
       <label for="assignedTo">Assign To</label>
-      <select class="form-control" id="assignedTo" name="assignedTo" required>
+      <div>
         <% employees.forEach(employee => { %>
-        <option value="<%= employee._id %>" <%= task.assignedTo._id.equals(employee._id) ? 'selected' : '' %>><%= employee.name %></option>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" id="assignedTo<%= employee._id %>" name="assignedTo" value="<%= employee._id %>" <%= task.assignedTo.some(assignee => assignee._id.equals(employee._id)) ? 'checked' : '' %>>
+            <label class="form-check-label" for="assignedTo<%= employee._id %>"><%= employee.name %></label>
+          </div>
         <% }); %>
-      </select>
+      </div>
     </div>
     <div class="form-group">
       <label for="priority">Priority</label>
