--- a/views/manager.ejs
+++ b/views/manager.ejs
@@ -17,7 +17,11 @@
       <tr>
         <td><%= task.title %></td>
         <td><%= task.description %></td>
-        <td><%= task.assignedTo.name %></td>
+        <td>
+          <% task.assignedTo.forEach(assignee => { %>
+            <div><%= assignee.name %></div>
+          <% }); %>
+        </td>
         <td><%= task.priority %></td>
         <td>
           <a href="/tasks/manager/edit/<%= task._id %>" class="btn btn-warning">Edit</a>
@@ -46,11 +50,14 @@
     </div>
     <div class="form-group">
       <label for="assignedTo">Assign To</label>
-      <select class="form-control" id="assignedTo" name="assignedTo" required>
+      <div>
         <% employees.forEach(employee => { %>
-        <option value="<%= employee._id %>"><%= employee.name %></option>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" id="assignedTo<%= employee._id %>" name="assignedTo" value="<%= employee._id %>">
+            <label class="form-check-label" for="assignedTo<%= employee._id %>"><%= employee.name %></label>
+          </div>
         <% }); %>
-      </select>
+      </div>
     </div>
     <div class="form-group">
       <label for="priority">Priority</label>
@@ -77,7 +84,11 @@
       <tr>
         <td><%= task.title %></td>
         <td><%= task.description %></td>
-        <td><%= task.assignedTo.name %></td>
+        <td>
+          <% task.assignedTo.forEach(assignee => { %>
+            <div><%= assignee.name %></div>
+          <% }); %>
+        </td>
         <td><%= task.priority %></td>
       </tr>
       <% }); %>
